test/SemanticAnalysis/Exceptions/ThrowInNoExcept.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

exception ExampleError(int value);

// CHECK: .loci:7:17: error: function '::function' is declared as 'noexcept' but can throw
void function() noexcept {
	throw ExampleError(1);
}

// CHECK: 1 error generated.
